[package]
name = "mega_tool"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["storage", "storage/entity"]

[dependencies]
storage = { path = "storage" }
entity = { path = "storage/entity" }

csv = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenvy = { workspace = true }
git2 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tracing-subscriber = { workspace = true }
rdkafka = { workspace = true, features = ["cmake-build"] }
bincode = { workspace = true }
serde = { workspace = true }

[workspace.dependencies]
anyhow = "1.0.81"
serde = { version = "1.0.197" }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.58"
tokio = { version = "1.37.0" }
clap = { version = "4.5.4" }
async-trait = "0.1.79"
chrono = "0.4.37"
sea-orm = "0.12.15"
csv = "1.3.0"
regex = "1.10.4"
url = "2.5.0"
walkdir = "2.5.0"
tar = "0.4.41"
flate2 = "1.0.30"
git2 = "0.19.0"
rdkafka = "0.36.2"
bincode = "1.3.3"
